[gd_scene load_steps=3 format=2]

[ext_resource path="res://theme_test.tres" type="Theme" id=1]
[ext_resource path="res://SaveFileButton.gd" type="Script" id=2]

[node name="SaveFileButton" type="Button"]
margin_right = 358.0
margin_bottom = 25.0
rect_min_size = Vector2( 100, 25 )
theme = ExtResource( 1 )
text = "File Name"
align = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 100.0
margin_top = 0.44545
margin_right = 400.0
margin_bottom = 25.4454
rect_min_size = Vector2( 300, 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="HBoxContainer"]
margin_right = 50.0
margin_bottom = 25.0
rect_min_size = Vector2( 50, 10 )

[node name="RoomLabel" type="Label" parent="HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -1.00002
margin_bottom = -1.90735e-06
text = "Room:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomValueLabel" type="Label" parent="HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 56.9843
margin_top = 0.412598
margin_right = 56.9842
margin_bottom = -0.587402
text = "*ROOM*"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeValueLabel" type="Label" parent="HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 207.984
margin_top = 0.412598
margin_right = 207.984
margin_bottom = -0.587402
text = "TIME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="." to="." method="_on_SaveFileButton_pressed"]
